[package]
name = "sommelier"
version = "0.1.0"
edition = "2021"

# Starting in Rust 1.62 you can use `cargo add` to add dependencies 
# to your project.
#
# If you're using an older Rust version,
# download cargo-edit(https://github.com/killercup/cargo-edit#installation) 
# to install the `add` subcommand.
#
# Running `cargo add DEPENDENCY_NAME` will
# add the latest version of a dependency to the list,
# and it will keep the alphabetic ordering for you.
[lib]
bench = false
path = "app/lib.rs"
name = "app"

[workspace]
members = [
    "web/ante",
    "web/contractor",
    "web/lambda"
]

[dependencies]
serde = { version = "1.0.171", features = ["derive"] }
serde_json = "1.0.104"
serde_repr = "0.1.16"
