[package]
name = "sommelier"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "=1.0.171", features = ["derive"] }
serde_json = "1.0.104"
serde_repr = "0.1.16"
rand = "0.3.0"
regex = "1.9.5"
sha256 = "1.4.0"
hex = "0.4.3"
discord_interaction = "0.0.4"
lambda_http = "0.8.1"
tokio = { version = "1", features = ["macros"] }
