[package]
name = "lambda"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sommelier = { path = "../.." }
ed25519-dalek = "2.0.0"
hex = "0.4.3"
lambda_http = "0.8.1"
lambda_runtime = "0.8.1"
serde_json = "1.0.104"
tokio = { version = "1.32.0", features = ["macros"] }
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", default-features = false, features = ["fmt"] }
